syntax = "proto3";
package gaming;

option go_package="./;gaming";

message startGameReq {
  string username = 1;
  string nickname = 2;
  string gamename = 3;
  string clientDes = 4;
}

message startGameRsp {
  int32 errCode = 1;
  string msg = 2;
  string serverDes = 3;
}

service GamingService {
  rpc StartGame(startGameReq) returns (startGameRsp) {}
}